# agent-test

./: .env.example  .gitignore  BACKEND-ROADMAP.md  README.md  novitas.code-workspace  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.pnpm-store/v3/files/04/: d19b58b7ddd1e50f69b8645d4566d23f2ebaf444c93879a2f45afddca8c3f06a01b649c82fb97d4f88cd03b39802b362a6110084a8461750af778867f3d7aa-index.json
.pnpm-store/v3/files/0c/: 36917a1b2c83568dac7e3eda19e3d41eef9d41848d4e8e225c9176431dd1a51d214bca5eb25f5eccbc2d5b57032ec346f61596e59b32ca6c461cf695c5b499-index.json  b914bc6c1ea77a68395db0a736c708e9d22869352f3c974eff9a1c580dd95165f7ac27a7c600f588cedaa3f38393ee2fcabf496f4f762e964e460e221f7de7-index.json
.pnpm-store/v3/files/14/: 6807da1f3328d8a6f658e3edd6a79053dc20220af42a796e6f9cda041261e3e1a5a1b9f9eb2b2ce0e2848a2b9fe3dee85189cd6857428b4fbfbde34da95d5c-index.json
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: app.module.ts  bootstrap-env.ts  main.ts  root.controller.ts
apps/web/: .env.example  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
erd/: README.md  sample-data.md
services/fastapi/: pyproject.toml
services/fastapi/app/: main.py
services/fastapi/app/routes/: chat.py  inventory_scan.py
supabase/migrations/: 20260406180000_profiles.sql  20260406190000_profiles_onboarding.sql  20260406200000_inventory_items.sql  20260406210000_user_settings.sql  20260407120000_user_settings_integration_policy.sql  20260408120000_storage_avatars.sql
(+200 files in other folders)
